[gd_scene load_steps=22 format=3 uid="uid://dx7k8aso5y80t"]

[ext_resource type="Texture2D" uid="uid://day0avbe6c6wq" path="res://Assets/tilemap.png" id="1_7y7fx"]
[ext_resource type="Script" path="res://Shop.gd" id="1_l4h6c"]
[ext_resource type="Texture2D" uid="uid://hmoaj1sdw31a" path="res://Assets/Arrow.png" id="2_6pjcv"]
[ext_resource type="FontFile" uid="uid://bu0ktuo2p2jt" path="res://Assets/Silkscreen-Regular.ttf" id="4_k7iln"]
[ext_resource type="Texture2D" uid="uid://di4u0urldhs15" path="res://Assets/Coin.png" id="5_1thhx"]
[ext_resource type="Texture2D" uid="uid://c07fgghbxj15a" path="res://Assets/Frame.png" id="7_7edfl"]
[ext_resource type="Texture2D" uid="uid://vefil8wnm0en" path="res://Assets/Fish.png" id="8_5i1eq"]
[ext_resource type="Texture2D" uid="uid://cv7s76h21j0p1" path="res://Assets/Chest.png" id="9_enoq8"]
[ext_resource type="Texture2D" uid="uid://mjjlji861snl" path="res://Assets/Cherries.png" id="9_uhleh"]
[ext_resource type="Texture2D" uid="uid://djji6mch0d0c7" path="res://Assets/Plain brown.png" id="10_0laak"]
[ext_resource type="Texture2D" uid="uid://cbni5qq0sk6xy" path="res://Assets/Cheese.png" id="10_p70mc"]
[ext_resource type="Texture2D" uid="uid://mtgcaquhorvn" path="res://Assets/Plain orange.png" id="11_7gp2e"]
[ext_resource type="Texture2D" uid="uid://ji1v7t5c1axu" path="res://Assets/Watermelon.png" id="11_60l6j"]
[ext_resource type="Texture2D" uid="uid://c10a2k6k2u4ut" path="res://Assets/Plain silver.png" id="12_oc7g0"]
[ext_resource type="Texture2D" uid="uid://eppsbr151wio" path="res://Assets/Plain caramel.png" id="13_4v82t"]
[ext_resource type="Texture2D" uid="uid://dke8trwvohlrv" path="res://Assets/Cat Frame.png" id="13_p3ung"]
[ext_resource type="Texture2D" uid="uid://dgf8whnkgukmr" path="res://Assets/Cat icon.png" id="14_virpj"]
[ext_resource type="Texture2D" uid="uid://0b3lione34ak" path="res://Assets/Fish icon.png" id="15_nppmf"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_0sqe3"]
texture = ExtResource("1_7y7fx")
separation = Vector2i(1, 1)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
10:1/0 = 0
11:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
9:1/0 = 0

[sub_resource type="TileSet" id="TileSet_7mffh"]
sources/0 = SubResource("TileSetAtlasSource_0sqe3")

[sub_resource type="GDScript" id="GDScript_lwofi"]
script/source = "extends Sprite2D


"

[node name="Shop" type="Node2D"]
script = ExtResource("1_l4h6c")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_7mffh")
format = 2
layer_0/tile_data = PackedInt32Array(1048605, 393216, 10, 1048606, 393216, 10, 1048607, 393216, 10, 1048608, 393216, 10, 1048609, 393216, 10, 1048610, 393216, 10, 1048611, 393216, 10, 1048612, 393216, 10, 1048613, 393216, 10, 1048614, 393216, 10, 1048615, 393216, 10, 1048616, 393216, 10, 1048617, 393216, 10, 1048618, 393216, 10, 1048619, 393216, 10, 1114155, 393216, 10, 1114154, 393216, 10, 1114153, 393216, 10, 1114152, 393216, 10, 1114151, 393216, 10, 1114150, 393216, 10, 1114149, 393216, 10, 1114148, 393216, 10, 1114147, 393216, 10, 1114146, 393216, 10, 1114145, 393216, 10, 1114144, 393216, 10, 1114143, 393216, 10, 1114142, 393216, 10, 1114141, 393216, 10, 1179677, 393216, 10, 1245213, 393216, 10, 1310749, 393216, 10, 1376285, 393216, 10, 1441821, 393216, 10, 1507357, 393216, 10, 1507358, 393216, 10, 1507359, 393216, 10, 1507360, 393216, 10, 1507361, 393216, 10, 1507362, 393216, 10, 1507363, 393216, 10, 1507364, 393216, 10, 1507365, 393216, 10, 1507366, 393216, 10, 1507367, 393216, 10, 1507368, 393216, 10, 1507369, 393216, 10, 1507370, 393216, 10, 1441834, 393216, 10, 1441835, 393216, 10, 1507371, 393216, 10, 1376299, 393216, 10, 1310763, 393216, 10, 1245227, 393216, 10, 1179691, 393216, 10, 1179690, 393216, 10, 1179689, 393216, 10, 1179688, 393216, 10, 1179687, 393216, 10, 1179686, 393216, 10, 1179685, 393216, 10, 1179684, 393216, 10, 1179683, 393216, 10, 1179682, 393216, 10, 1179681, 393216, 10, 1179680, 393216, 10, 1179679, 393216, 10, 1179678, 393216, 10, 1245214, 393216, 10, 1245215, 393216, 10, 1245216, 393216, 10, 1245217, 393216, 10, 1245218, 393216, 10, 1245219, 393216, 10, 1245220, 393216, 10, 1245221, 393216, 10, 1245222, 393216, 10, 1245223, 393216, 10, 1245224, 393216, 10, 1245225, 393216, 10, 1245226, 393216, 10, 1310762, 393216, 10, 1310761, 393216, 10, 1310760, 393216, 10, 1310759, 393216, 10, 1310758, 393216, 10, 1310757, 393216, 10, 1310756, 393216, 10, 1310755, 393216, 10, 1310754, 393216, 10, 1310753, 393216, 10, 1310752, 393216, 10, 1310751, 393216, 10, 1310750, 393216, 10, 1376286, 393216, 10, 1376287, 393216, 10, 1376288, 393216, 10, 1376289, 393216, 10, 1376290, 393216, 10, 1376291, 393216, 10, 1376292, 393216, 10, 1376293, 393216, 10, 1376294, 393216, 10, 1376295, 393216, 10, 1376296, 393216, 10, 1376297, 393216, 10, 1376298, 393216, 10, 1441833, 393216, 10, 1441832, 393216, 10, 1441831, 393216, 10, 1441830, 393216, 10, 1441829, 393216, 10, 1441828, 393216, 10, 1441827, 393216, 10, 1441826, 393216, 10, 1441825, 393216, 10, 1441824, 393216, 10, 1441823, 393216, 10, 1441822, 393216, 10, 983083, 393216, 10, 983082, 393216, 10, 983081, 393216, 10, 983080, 393216, 10, 983079, 393216, 10, 983078, 393216, 10, 983077, 393216, 10, 983076, 393216, 10, 983075, 393216, 10, 983074, 393216, 10, 983073, 393216, 10, 983072, 393216, 10, 983071, 393216, 10, 983070, 393216, 10, 983069, 393216, 10, 1572907, 393216, 10, 1572906, 393216, 10, 1572905, 393216, 10, 1572904, 393216, 10, 1572903, 393216, 10, 1572902, 393216, 10, 1572901, 393216, 10, 1572900, 393216, 10, 1572899, 393216, 10, 1572898, 393216, 10, 1572897, 393216, 10, 1572896, 393216, 10, 1572895, 393216, 10, 1572894, 393216, 10, 1572893, 393216, 10, 1572892, 393216, 10, 1507356, 393216, 10, 1441820, 393216, 10, 1376284, 393216, 10, 1310748, 393216, 10, 1245212, 393216, 10, 1179676, 393216, 10, 1114140, 393216, 10, 1048604, 393216, 10, 983068, 393216, 10)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(507, 274)
zoom = Vector2(10, 10)

[node name="Arrow" type="Sprite2D" parent="."]
position = Vector2(456, 248)
texture = ExtResource("2_6pjcv")
script = SubResource("GDScript_lwofi")

[node name="Button" type="Button" parent="Arrow"]
offset_left = -4.0
offset_top = -5.0
offset_right = 4.0
offset_bottom = 5.0
action_mode = 0
flat = true
metadata/_edit_use_anchors_ = true

[node name="Coin" type="Sprite2D" parent="."]
position = Vector2(464, 248)
texture = ExtResource("5_1thhx")

[node name="Money" type="Label" parent="."]
offset_left = 468.0
offset_top = 242.0
offset_right = 486.0
offset_bottom = 253.0
theme_override_fonts/font = ExtResource("4_k7iln")
theme_override_font_sizes/font_size = 8
text = "20"

[node name="Food" type="Sprite2D" parent="."]
position = Vector2(467, 273)
texture = ExtResource("7_7edfl")

[node name="Fish" type="Sprite2D" parent="Food"]
position = Vector2(1, 1)
texture = ExtResource("8_5i1eq")

[node name="Buy" type="Sprite2D" parent="Food"]
position = Vector2(0.5, 12.5)
scale = Vector2(1.4375, 0.4375)
texture = ExtResource("7_7edfl")

[node name="Buy Label" type="Label" parent="Food"]
offset_left = -9.0
offset_top = 6.0
offset_right = 10.0
offset_bottom = 17.0
theme_override_colors/font_color = Color(0.501961, 0.380392, 0.286275, 1)
theme_override_fonts/font = ExtResource("4_k7iln")
theme_override_font_sizes/font_size = 8
text = "Buy"

[node name="Buy Fish Button" type="Button" parent="Food/Buy Label"]
layout_mode = 0
offset_left = -2.0
offset_top = 3.0
offset_right = 21.0
offset_bottom = 11.0
focus_mode = 0
theme_override_colors/font_color = Color(0.501961, 0.380392, 0.286275, 1)
action_mode = 0
flat = true
metadata/_edit_use_anchors_ = true

[node name="Price" type="Label" parent="Food"]
offset_left = -7.0
offset_top = -10.0
offset_right = -2.0
offset_bottom = 1.0
theme_override_colors/font_color = Color(0.501961, 0.380392, 0.286275, 1)
theme_override_fonts/font = ExtResource("4_k7iln")
theme_override_font_sizes/font_size = 8
text = "1"

[node name="Frame2" type="Sprite2D" parent="Food"]
position = Vector2(27, 0)
texture = ExtResource("7_7edfl")

[node name="Cherries" type="Sprite2D" parent="Food/Frame2"]
position = Vector2(1, 1)
texture = ExtResource("9_uhleh")

[node name="Buy" type="Sprite2D" parent="Food/Frame2"]
position = Vector2(0.5, 12.5)
scale = Vector2(1.4375, 0.4375)
texture = ExtResource("7_7edfl")

[node name="Buy Label" type="Label" parent="Food/Frame2"]
offset_left = -9.0
offset_top = 6.0
offset_right = 10.0
offset_bottom = 17.0
theme_override_colors/font_color = Color(0.501961, 0.380392, 0.286275, 1)
theme_override_fonts/font = ExtResource("4_k7iln")
theme_override_font_sizes/font_size = 8
text = "Buy"

[node name="Buy Cherries Button" type="Button" parent="Food/Frame2/Buy Label"]
layout_mode = 0
offset_left = -2.0
offset_top = 3.0
offset_right = 21.0
offset_bottom = 11.0
focus_mode = 0
action_mode = 0
flat = true

[node name="Price2" type="Label" parent="Food/Frame2"]
offset_left = -7.0
offset_top = -10.0
offset_right = -1.0
offset_bottom = 1.0
theme_override_colors/font_color = Color(0.501961, 0.380392, 0.286275, 1)
theme_override_fonts/font = ExtResource("4_k7iln")
theme_override_font_sizes/font_size = 8
text = "4"

[node name="Frame3" type="Sprite2D" parent="Food"]
position = Vector2(54, 0)
texture = ExtResource("7_7edfl")

[node name="Cheese" type="Sprite2D" parent="Food/Frame3"]
position = Vector2(2, 2)
texture = ExtResource("10_p70mc")

[node name="Buy" type="Sprite2D" parent="Food/Frame3"]
position = Vector2(0.5, 12.5)
scale = Vector2(1.4375, 0.4375)
texture = ExtResource("7_7edfl")

[node name="Buy Label" type="Label" parent="Food/Frame3"]
offset_left = -9.0
offset_top = 6.0
offset_right = 10.0
offset_bottom = 17.0
theme_override_colors/font_color = Color(0.501961, 0.380392, 0.286275, 1)
theme_override_fonts/font = ExtResource("4_k7iln")
theme_override_font_sizes/font_size = 8
text = "Buy"

[node name="Buy Cheese Button" type="Button" parent="Food/Frame3/Buy Label"]
layout_mode = 0
offset_left = -2.0
offset_top = 3.0
offset_right = 21.0
offset_bottom = 11.0
focus_mode = 0
action_mode = 0
flat = true

[node name="Price3" type="Label" parent="Food/Frame3"]
offset_left = -7.0
offset_top = -10.0
offset_right = -1.0
offset_bottom = 1.0
theme_override_colors/font_color = Color(0.501961, 0.380392, 0.286275, 1)
theme_override_fonts/font = ExtResource("4_k7iln")
theme_override_font_sizes/font_size = 8
text = "2"

[node name="Frame4" type="Sprite2D" parent="Food"]
position = Vector2(80, 0)
texture = ExtResource("7_7edfl")

[node name="Watermelon" type="Sprite2D" parent="Food/Frame4"]
position = Vector2(2, 3)
texture = ExtResource("11_60l6j")

[node name="Buy" type="Sprite2D" parent="Food/Frame4"]
position = Vector2(0.5, 12.5)
scale = Vector2(1.4375, 0.4375)
texture = ExtResource("7_7edfl")

[node name="Buy Label" type="Label" parent="Food/Frame4"]
offset_left = -9.0
offset_top = 6.0
offset_right = 10.0
offset_bottom = 17.0
theme_override_colors/font_color = Color(0.501961, 0.380392, 0.286275, 1)
theme_override_fonts/font = ExtResource("4_k7iln")
theme_override_font_sizes/font_size = 8
text = "Buy"

[node name="Buy Melon Button" type="Button" parent="Food/Frame4/Buy Label"]
layout_mode = 0
offset_left = -2.0
offset_top = 3.0
offset_right = 21.0
offset_bottom = 11.0
focus_mode = 0
action_mode = 0
flat = true

[node name="Label" type="Label" parent="Food/Frame4"]
offset_left = -7.0
offset_top = -10.0
offset_right = -1.0
offset_bottom = 1.0
theme_override_colors/font_color = Color(0.501961, 0.380392, 0.286275, 1)
theme_override_fonts/font = ExtResource("4_k7iln")
theme_override_font_sizes/font_size = 8
text = "3"

[node name="CatIcon" type="Sprite2D" parent="Food"]
position = Vector2(77, -25)
texture = ExtResource("14_virpj")

[node name="Cat Button" type="Button" parent="Food/CatIcon"]
offset_left = -7.0
offset_top = -5.0
offset_right = 6.0
offset_bottom = 6.0
action_mode = 0
flat = true
metadata/_edit_use_anchors_ = true

[node name="Cat Frame" type="Sprite2D" parent="."]
visible = false
position = Vector2(468, 272)
texture = ExtResource("13_p3ung")

[node name="Plain Brown" type="Sprite2D" parent="Cat Frame"]
position = Vector2(1.00003, 3)
texture = ExtResource("10_0laak")

[node name="Buy Frame" type="Sprite2D" parent="Cat Frame/Plain Brown"]
position = Vector2(-0.938751, 15.5179)
scale = Vector2(1.4375, 0.4375)
texture = ExtResource("7_7edfl")

[node name="Bought Label" type="Label" parent="Cat Frame/Plain Brown/Buy Frame"]
visible = false
offset_left = -7.05853
offset_top = -12.4051
offset_right = 32.9415
offset_bottom = 10.5949
theme_override_colors/font_color = Color(0.501961, 0.380392, 0.286275, 1)
theme_override_fonts/font = ExtResource("4_k7iln")
text = "x"

[node name="Buy Label" type="Label" parent="Cat Frame/Plain Brown"]
offset_left = -10.0
offset_top = 9.0
offset_right = 9.0
offset_bottom = 20.0
theme_override_colors/font_color = Color(0.501961, 0.380392, 0.286275, 1)
theme_override_fonts/font = ExtResource("4_k7iln")
theme_override_font_sizes/font_size = 8
text = "Buy"
metadata/_edit_use_anchors_ = true

[node name="Button" type="Button" parent="Cat Frame/Plain Brown/Buy Label"]
layout_mode = 0
offset_left = -2.56122
offset_top = 2.98209
offset_right = 21.4388
offset_bottom = 10.9821
focus_mode = 0
action_mode = 0
flat = true

[node name="Price" type="Label" parent="Cat Frame/Plain Brown"]
offset_left = -4.0
offset_top = -19.0
offset_right = 2.0
offset_bottom = -8.0
theme_override_colors/font_color = Color(0.501961, 0.380392, 0.286275, 1)
theme_override_fonts/font = ExtResource("4_k7iln")
theme_override_font_sizes/font_size = 8
text = "7"

[node name="CatFrame2" type="Sprite2D" parent="Cat Frame"]
position = Vector2(27, 0)
texture = ExtResource("13_p3ung")

[node name="Plain Orange" type="Sprite2D" parent="Cat Frame/CatFrame2"]
position = Vector2(-3.05176e-05, 3)
texture = ExtResource("11_7gp2e")

[node name="Buy Frame 2" type="Sprite2D" parent="Cat Frame/CatFrame2/Plain Orange"]
position = Vector2(0.0612793, 15.6403)
scale = Vector2(1.4375, 0.4375)
texture = ExtResource("7_7edfl")

[node name="Bought Label 2" type="Label" parent="Cat Frame/CatFrame2/Plain Orange/Buy Frame 2"]
visible = false
offset_left = -7.22268
offset_top = -11.5962
offset_right = 32.7773
offset_bottom = 11.4038
theme_override_colors/font_color = Color(0.501961, 0.380392, 0.286275, 1)
theme_override_fonts/font = ExtResource("4_k7iln")
text = "x"

[node name="Buy Label 2" type="Label" parent="Cat Frame/CatFrame2/Plain Orange"]
offset_left = -9.0
offset_top = 9.0
offset_right = 10.0
offset_bottom = 20.0
theme_override_colors/font_color = Color(0.501961, 0.380392, 0.286275, 1)
theme_override_fonts/font = ExtResource("4_k7iln")
theme_override_font_sizes/font_size = 8
text = "Buy"

[node name="Button 2" type="Button" parent="Cat Frame/CatFrame2/Plain Orange/Buy Label 2"]
layout_mode = 0
offset_left = -2.56128
offset_top = 2.85968
offset_right = 21.4387
offset_bottom = 10.8597
focus_mode = 0
action_mode = 0
flat = true

[node name="Price2" type="Label" parent="Cat Frame/CatFrame2/Plain Orange"]
offset_left = -6.0
offset_top = -19.0
offset_right = 5.0
offset_bottom = -8.0
theme_override_colors/font_color = Color(0.501961, 0.380392, 0.286275, 1)
theme_override_fonts/font = ExtResource("4_k7iln")
theme_override_font_sizes/font_size = 8
text = "10"

[node name="CatFrame3" type="Sprite2D" parent="Cat Frame"]
position = Vector2(54, 0)
texture = ExtResource("13_p3ung")

[node name="Plain Silver" type="Sprite2D" parent="Cat Frame/CatFrame3"]
position = Vector2(1.00006, 3)
texture = ExtResource("12_oc7g0")

[node name="Buy Frame 3" type="Sprite2D" parent="Cat Frame/CatFrame3/Plain Silver"]
position = Vector2(-1.13995, 15.7498)
scale = Vector2(1.4375, 0.4375)
texture = ExtResource("7_7edfl")

[node name="Bought Label 3" type="Label" parent="Cat Frame/CatFrame3/Plain Silver/Buy Frame 3"]
visible = false
offset_left = -6.89441
offset_top = -11.5962
offset_right = 33.1056
offset_bottom = 11.4038
theme_override_colors/font_color = Color(0.501961, 0.380392, 0.286275, 1)
theme_override_fonts/font = ExtResource("4_k7iln")
text = "x"

[node name="Buy Label 3" type="Label" parent="Cat Frame/CatFrame3/Plain Silver"]
offset_left = -11.0
offset_top = 9.0
offset_right = 8.0
offset_bottom = 20.0
theme_override_colors/font_color = Color(0.501961, 0.380392, 0.286275, 1)
theme_override_fonts/font = ExtResource("4_k7iln")
theme_override_font_sizes/font_size = 8
text = "Buy"

[node name="Button 3" type="Button" parent="Cat Frame/CatFrame3/Plain Silver/Buy Label 3"]
layout_mode = 0
offset_left = -2.47809
offset_top = 2.86816
offset_right = 21.5219
offset_bottom = 10.8682
focus_mode = 0
action_mode = 0
flat = true

[node name="Price3" type="Label" parent="Cat Frame/CatFrame3/Plain Silver"]
offset_left = -7.0
offset_top = -19.0
offset_right = 4.0
offset_bottom = -8.0
theme_override_colors/font_color = Color(0.501961, 0.380392, 0.286275, 1)
theme_override_fonts/font = ExtResource("4_k7iln")
theme_override_font_sizes/font_size = 8
text = "15"

[node name="CatFrame4" type="Sprite2D" parent="Cat Frame"]
position = Vector2(81, 0)
texture = ExtResource("13_p3ung")

[node name="Plain Caramel" type="Sprite2D" parent="Cat Frame/CatFrame4"]
position = Vector2(1.00012, 3)
texture = ExtResource("13_4v82t")

[node name="Buy Frame 4" type="Sprite2D" parent="Cat Frame/CatFrame4/Plain Caramel"]
position = Vector2(-0.920227, 15.7191)
scale = Vector2(1.4375, 0.4375)
texture = ExtResource("7_7edfl")

[node name="Bought Label 4" type="Label" parent="Cat Frame/CatFrame4/Plain Caramel/Buy Frame 4"]
visible = false
offset_left = -6.97648
offset_top = -12.4052
offset_right = 33.0235
offset_bottom = 10.5948
theme_override_colors/font_color = Color(0.501961, 0.380392, 0.286275, 1)
theme_override_fonts/font = ExtResource("4_k7iln")
text = "x"

[node name="Buy Label 4" type="Label" parent="Cat Frame/CatFrame4/Plain Caramel"]
offset_left = -10.0
offset_top = 9.0
offset_right = 9.0
offset_bottom = 20.0
theme_override_colors/font_color = Color(0.501961, 0.380392, 0.286275, 1)
theme_override_fonts/font = ExtResource("4_k7iln")
theme_override_font_sizes/font_size = 8
text = "Buy"

[node name="Button 4" type="Button" parent="Cat Frame/CatFrame4/Plain Caramel/Buy Label 4"]
layout_mode = 0
offset_left = -2.57983
offset_top = 2.78088
offset_right = 21.4202
offset_bottom = 10.7809
focus_mode = 0
action_mode = 0
flat = true

[node name="Label" type="Label" parent="Cat Frame/CatFrame4/Plain Caramel"]
offset_left = -7.0
offset_top = -19.0
offset_right = 4.0
offset_bottom = -8.0
theme_override_colors/font_color = Color(0.501961, 0.380392, 0.286275, 1)
theme_override_fonts/font = ExtResource("4_k7iln")
theme_override_font_sizes/font_size = 8
text = "10"

[node name="Fish Icon" type="Sprite2D" parent="Cat Frame"]
position = Vector2(74.9438, -24.472)
texture = ExtResource("15_nppmf")

[node name="Fish Button" type="Button" parent="Cat Frame/Fish Icon"]
offset_left = -5.0
offset_top = -5.0
offset_right = 5.0
offset_bottom = 4.0
action_mode = 0
flat = true
metadata/_edit_use_anchors_ = true

[node name="Chest" type="Sprite2D" parent="."]
position = Vector2(557, 247)
texture = ExtResource("9_enoq8")

[node name="Button" type="Button" parent="Chest"]
offset_left = -4.0
offset_top = -4.0
offset_right = 5.0
offset_bottom = 4.0
action_mode = 0
flat = true
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="Arrow/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Food/Buy Label/Buy Fish Button" to="." method="_on_buy_fish_button_pressed"]
[connection signal="pressed" from="Food/Frame2/Buy Label/Buy Cherries Button" to="." method="_on_buy_cherries_button_pressed"]
[connection signal="pressed" from="Food/Frame3/Buy Label/Buy Cheese Button" to="." method="_on_buy_cheese_button_pressed"]
[connection signal="pressed" from="Food/Frame4/Buy Label/Buy Melon Button" to="." method="_on_buy_melon_button_pressed"]
[connection signal="pressed" from="Food/CatIcon/Cat Button" to="." method="_on_cat_button_pressed"]
[connection signal="pressed" from="Cat Frame/Plain Brown/Buy Label/Button" to="." method="_on_plain_brown_button_pressed"]
[connection signal="pressed" from="Cat Frame/CatFrame2/Plain Orange/Buy Label 2/Button 2" to="." method="_on_plain_orange_button_pressed"]
[connection signal="pressed" from="Cat Frame/CatFrame3/Plain Silver/Buy Label 3/Button 3" to="." method="_on_plain_silver_button_pressed"]
[connection signal="pressed" from="Cat Frame/CatFrame4/Plain Caramel/Buy Label 4/Button 4" to="." method="_on_plain_caramel_button_pressed"]
[connection signal="pressed" from="Cat Frame/Fish Icon/Fish Button" to="." method="_on_fish_button_pressed"]
[connection signal="pressed" from="Chest/Button" to="." method="_on_chest_button_pressed"]
